<resources>


    <string name="app_name">My Application</string>
    <string name="enter_your_name">enter your name</string>
    <string name="enter_your_family">enter your family</string>
    <string name="enter_your_age">enter your age</string>
    <string name="enter_email_address">enter email address</string>
    <string name="enter_your_phone_number">enter your phone number</string>
    <string name="enter">Enter</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="name">name</string>
    <string name="family">family</string>
    <string name="age">age</string>
    <string name="email">email</string>
    <string name="phonenumber">phonenumber</string>
    <string name="toch_to_open_the_insta_page">Toch to open the insta page</string>
    <string name="save_data">Save Data</string>
    <string name="title_activity_test_recycler" translatable="false">testRecycler</string>
    <string name="list_view">List view</string>
    <string name="oghatsharei">OghatSharei</string>
    <string name="_Fajr">Fajr</string>
    <string name="Namayesh_Oghat_sharei">Namayesh Oghat Sharei</string>
    <string name="_Asr">Asr</string>
    <string name="_Isha">Isha</string>
    <string name="_Maghrib">Maghrib</string>
    <string name="_Tolo">Tolo</string>
    <string name="_Zohr">Zohr</string>


</resources>
