<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff292829"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText

        android:id="@+id/txt-Enter-Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape"
        android:hint="@string/enter_your_name"
        android:inputType="textFilter"
        android:nextFocusDown="@id/txt-family"
        android:singleLine="true"
        android:textColorHint="@color/white"
        android:textSize="37sp"
        android:textStyle="italic"
        android:typeface="serif" />


    <EditText
        android:id="@+id/txt-family"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape"
        android:hint="@string/enter_your_family"
        android:inputType="text"
        android:nextFocusDown="@id/txt-Age"
        android:singleLine="true"
        android:textColorHint="@color/white"
        android:textSize="36dp"
        android:textStyle="italic"
        android:typeface="serif" />


    <EditText
        android:id="@+id/txt-Age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape"
        android:hint="@string/enter_your_age"
        android:inputType="number"
        android:maxLength="3"
        android:nextFocusDown="@id/txt-Enter-Email-Address"
        android:singleLine="true"
        android:textColorHint="#F0FFFF"
        android:textSize="40sp"
        android:textStyle="italic"
        android:typeface="serif" />

    <EditText
        android:id="@+id/txt-Enter-Email-Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@id/txt-PhoneNumber"
        android:singleLine="true"
        android:textColorHint="#f0ffff"
        android:textSize="35dp"
        android:textStyle="italic"
        android:typeface="serif" />


    <EditText

        android:id="@+id/txt-PhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:hint="@string/enter_your_phone_number"
        android:inputType="phone"
        android:maxLength="11"
        android:textColorHint="@color/white" />


    <Button
        android:id="@+id/btn-ENTER"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:background="@drawable/shape2"
        android:text="@string/enter"
        android:textStyle="bold"
        android:typeface="serif" />


</LinearLayout>

