<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/shape"
        android:orientation="horizontal">

        <EditText
            android:layout_marginLeft="15dp"
            android:id="@+id/txt_city"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:background="@android:color/transparent"
            android:ems="13"
            android:hint="city..."
            android:inputType="text" />

        <Button
            android:id="@+id/btn_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="Search" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_oghat"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:background="@drawable/avatar11"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical"
            android:textDirection="rtl">

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:layout_marginTop="9dp"
                android:gravity="left"
                android:text="@string/_Fajr"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="9dp"
                android:gravity="left"
                android:text="@string/_Tolo"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="9dp"
                android:gravity="left"
                android:text="@string/_Zohr"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="9dp"
                android:gravity="left"
                android:text="@string/_Asr"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginTop="9dp"
                android:gravity="left"
                android:text="@string/_Maghrib"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginTop="9dp"
                android:gravity="left"
                android:text="@string/_Isha"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical"
            android:textDirection="rtl">

            <TextView
                android:id="@+id/txt_fajr"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:layout_marginTop="9dp"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_tolo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="9dp"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_zohr"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="9dp"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_asr"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="9dp"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_maghreb"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginTop="9dp"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_esha"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginTop="9dp"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>